--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -27,7 +27,7 @@
                   <iframe [src]="a.uri | domseguro:'https://open.spotify.com/embed?uri='" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
                 </td>
                 <td>
-                  <a [routerLink]="['/artist', a.id]">Ver detalle</a>
+                  <a [routerLink]="['/album', a.id]">Ver detalle</a>
                 </td>
               </tr>
             </tbody>
